Update form.html for testing

--- a/public/form.html
+++ b/public/form.html
@@ -10,7 +10,7 @@
   <div class="docker-form-container">
     <h2>Docker Form</h2>
     <form id="myForm" action="/submit-form" method="post">
-      <label for="name">Enter Your Name:</label>
+      <label for="name">Enter Your Name for testing the application:</label>
       <div class="docker-whale-icon">
         <img src="https://miro.medium.com/v2/resize:fit:601/0*1XzkA-KeQkc2ugix.png" alt="Docker Whale">
       </div>
